# cpp-build-system

./: Makefile  README.md  main.py  pyproject.toml
